added 'top 10 book reviewers' REST endpoint
